--- a/src/client/global.css
+++ b/src/client/global.css
@@ -1,96 +1,130 @@
 .cmdk-container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(50%, 50%);
-	background-color: aqua;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(50%, 50%);
+  background-color: aqua;
 }
 
-[cmdk-root] {
-
-}
-
-[cmdk-input] {
-}
-
-[cmdk-item] {
-  content-visibility: auto;
-
-  cursor: pointer;
-  height: 48px;
-  border-radius: 8px;
-  font-size: 14px;
-  display: flex;
+.layer {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   align-items: center;
-  gap: 8px;
-  padding: 0 16px;
-  color: var(--gray11);
-  user-select: none;
-  will-change: background, color;
-  transition: all 150ms ease;
-  transition-property: none;
-
-  &[data-selected="true"] {
-    background: var(--grayA3);
-    color: var(--gray12);
-  }
-
-  &[data-disabled="true"] {
-    color: var(--gray8);
-    cursor: not-allowed;
-  }
-
-  &:active {
-    transition-property: background;
-    background: var(--gray4);
-  }
-
-  & + [cmdk-item] {
-    margin-top: 4px;
-  }
-
-  svg {
-    width: 18px;
-    height: 18px;
-  }
-}
-
-[cmdk-list] {
-  height: min(330px);
-  max-height: 400px;
-  overflow: auto;
-  overscroll-behavior: contain;
-  transition: 100ms ease;
-  transition-property: height;
-}
-
-[cmdk-separator] {
-  height: 1px;
-  width: 100%;
-  background: var(--gray5);
-  margin: 4px 0;
-}
-
-*:not([hidden]) + [cmdk-group] {
-  margin-top: 8px;
-}
-
-[cmdk-group-heading] {
-  user-select: none;
-  font-size: 12px;
-  color: var(--gray11);
-  padding: 0 8px;
   display: flex;
-  align-items: center;
-  margin-bottom: 8px;
-}
-
-[cmdk-empty] {
-  font-size: 14px;
-  display: flex;
-  align-items: center;
   justify-content: center;
-  height: 48px;
-  white-space: pre-wrap;
-  color: var(--gray11);
+  flex-direction: column;
+  min-height: 0;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.focusLock {
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+  max-width: 100%;
+}
+
+.container {
+  background: none !important;
+  box-shadow: none !important;
+  width: 570px;
+  height: 365px;
+}
+
+.root {
+  background-color: var(--modal-background);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  pointer-events: all;
+  position: relative;
+  max-height: 100%;
+}
+
+.rootWithShadow {
+  box-shadow: var(--legacy-elevation-border), var(--legacy-elevation-high);
+}
+
+.layerContainer {
+  background: none !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  right: var(--devtools-sidebar-width, 0);
+  bottom: 0;
+  pointer-events: none;
+  z-index: 1002;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  right: var(--devtools-sidebar-width, 0);
+  bottom: 0;
+  left: 0;
+  transform: translatez(0);
+}
+
+.backdrop.withLayer {
+  pointer-events: all;
+}
+
+.result {
+  position: relative;
+  border-radius: 3px;
+  font-weight: 500;
+  font-size: 16px;
+  cursor: pointer;
+  overflow: hidden;
+  height: 34px;
+}
+
+.quickswicher {
+  position: relative;
+  width: 570px;
+  border-radius: 8px;
+  padding: 20px 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  box-shadow: 0 2px 10px hsl(0 calc(1 * 0%) 0% /.2), 0 0 0 1px rgba(28, 36, 43, .6);
+  background-color: var(--background-secondary);
+  color: var(--text-normal);
+}
+
+.input {
+  position: relative;
+  z-index: 1;
+  flex: 0 0 auto;
+  display: block;
+  padding: 0 12px;
+  font-size: 22px;
+  border-radius: 5px;
+  border: none;
+  height: 70px;
+  line-height: 70px;
+  color: var(--text-normal);
+  background-color: var(--input-background);
+}
+
+.scroller {
+  z-index: 0;
+  margin-right: -17px;
+  margin-top: 16px;
+  max-height: 236px;
+  background-color: var(--background-secondary);
+}
+
+.scrollerBase {
+  position: relative;
+  box-sizing: border-box;
+  min-height: 0;
+  flex: 1 1 auto;
 }
